# youtube_monitor_action

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
monitor_for_video/: __main__.py
tests/: conftest.py  test_loggin_utils.py  test_parse_response.py
tests/response_test_cases/: nwcoc_8_23_21.xml
tests/snapshots/test_parse_response/test__example_response__yields_expected/input_file0/: expected.json
youtube_monitor_action/: __init__.py  __main__.py  _logging_utils.py
