[tool.poetry]
name = "youtube_monitor_action"
version = "1.1.0-alpha.0"
description = "Monitor for new video on YouTube Channel"
authors = ["mshafer1"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mshafer1/youtube_monitor_action"
include = [
    "LICENSE",
    "CHANGELOG.md",
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.3"
requests = "^2.34.2"
xmltodict = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-mock = "^3.15.1"
pytest-snapshot = "^0.9.0"
ni-python-styleguide = "^0.5.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.poetry.scripts]
youtube-monitor-action = "youtube_monitor_action.__main__:main"
